Fix header wrapping and social icon stacking on medium screens

--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ a:focus {
 }
 
 .custom_nav-container .navbar-nav .nav-item .nav-link {
-  padding: 10px 20px;
+  padding: 10px 10px;
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
@@ -263,6 +263,11 @@ a:focus {
 }
 /* header  social*/
 
+.navbar-nav .header_social {
+  display: flex;
+  align-items: center;
+}
+
 .navbar-nav .header_social a {
   justify-content: center;
   -webkit-box-align: center;
@@ -270,17 +275,16 @@ a:focus {
   align-items: center;
   color: #ffffff;
   border-radius: 100%;
-  margin-right: 10px;
-  font-size: 24px;
+  margin-left: 10px;
+  font-size: 20px;
 }
 
 .navbar-nav .header_social a :hover{
-  font-size: 26px;
   color: #2a8a6c;
 }
 
 .header_social{
-  padding-left: 99px;
+  padding-left: 20px;
 }
 @media only screen and (max-width: 991px) {
   .header_section .container {
